--- a/templates/hello.html
+++ b/templates/hello.html
@@ -8,10 +8,10 @@
    <body>
      <main>
         <div class="px-4 py-3 my-2 text-center">
-            <h1 class="display-6 fw-bold">Account {{name}}</h1>
-            <a href="{{ url_for('index') }}" class="btn btn-primary btn-lg px-4 gap-3">Log out</a>
+            <h1 class="display-6 fw-bold">{{name}}
+            <a href="{{ url_for('index') }}" class="btn btn-primary btn-lg px-4 gap-3">Log out</a></h1>
             <p class="fs-5">
-                It is nice to meet you!
+                Total balance of incomes and outcomes
             </p>
           </div>
      </main>      
